--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+    <div class="home-banner">
+      <div class="content">
+      <h1>Are you ready to go on a journey? <br>I am! lets go</br></h1>
+      <button>Start</button>
+      </div>
+    </div>
     <div class="back-img">
       <div id="runner"></div>
     </div>
