--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     <div class="home-banner">
       <div class="content">
       <h1>Are you ready to go on a journey? <br>I am! lets go</br></h1>
-      <button>Start</button>
+      <a href="index2.html"><button>Start</button></a>
       </div>
-    </div>
-    <div class="back-img">
-      <div id="runner"></div>
     </div>
   </body>
   </html>
