added js for background image to change

--- a/index2.html
+++ b/index2.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>Spiderman Travel</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class="back-img" id="journey">
+    <div class="back-img">
         <div id="runner"></div>
       </div>
+      <script src="js/index.js" type="text/javascript"></script>
 </body>
 </html>
 
