changed and added images also added a button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="home-banner">
       <div class="content">
       <h1>Are you ready to go on a journey? <br>I am! lets go</br></h1>
-      <a href="index2.html"><button>Start</button></a>
+      <a href="index2.html"><button class="button1">Start</button></a>
       </div>
     </div>
   </body>
