--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,9 @@
 <body>
     <div class="back-img">
         <div id="runner"></div>
+        <div class="content2">
+          <a href="index.html" class="buttonsecond button2">End Journey</a>
+        </div>
       </div>
       <script src="js/index.js" type="text/javascript"></script>
 </body>
