--- a/end.html
+++ b/end.html
@@ -7,14 +7,11 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class="back-img">
-        <div id="runner"></div>
-        <div class="content2">
-          <a href="end.html" class="buttonsecond button2">Finish</a>
-        </div>
-      </div>
-      <script src="js/index.js" type="text/javascript"></script>
+  <div class="end-banner">
+    <div class="content3">
+    <h1>To be continued..</h1>
+    <a href="index.html"><button class="button1">Home</button></a>
+    </div>
+  </div>
 </body>
 </html>
-
-
