--- a/end.html
+++ b/end.html
@@ -10,9 +10,18 @@
 <body>
   <div class="end-banner">
     <div class="content3">
-    <h1>To be continued..</h1>
-    <a href="index.html"><button class="button1">Home</button></a>
+      <div class="circular-sbl">
+        Until next time! <br>
+        -Your Friendly Neighborhood SpiderMan <br>
+          <a href="index.html"><button class="button1">Home</button></a></continued>
+        <div class="circle1l"></div>
+        <div class="circle2l"></div>
+        <div class="circle3l"></div>
+        <div class="circle4l"></div>
+        </div>
+    
     </div>
   </div>
+
 </body>
 </html>
