--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="home-banner">
       <div class="content">
         <div class="circular-sb">
-            Are you ready to go on a journey? <br>
+            With great power comes great responsibility. <br>
+            I think it's time for a Vacation. <br>
+            Are you ready to take the journey with me? <br>
             <a href="index2.html"><button class="button1">Start</button></a>
           <div class="circle1"></div>
           <div class="circle2"></div>
