--- a/end.html
+++ b/end.html
@@ -11,7 +11,7 @@
   <div class="end-banner">
     <div class="content3">
       <div class="circular-sbl">
-        Until next time! <br>
+        That was Great! Until next time.<br>
         -Your Friendly Neighborhood SpiderMan <br>
           <a href="index.html"><button class="button1">Home</button></a></continued>
         <div class="circle1l"></div>
