--- a/end.html
+++ b/end.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>Spiderman Travel</title>
-<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-  <div class="end-banner">
-    <div class="content3">
-      <div class="circular-sbl">
-        That was Great! Until next time.<br>
-        -Your Friendly Neighborhood SpiderMan <br>
-          <a href="index.html"><button class="button1">Home</button></a></continued>
-        <div class="circle1l"></div>
-        <div class="circle2l"></div>
-        <div class="circle3l"></div>
-        <div class="circle4l"></div>
-        </div>
-    
-    </div>
-  </div>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Spiderman Travel</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
+<body>
+    <div class="end-banner">
+        <div class="content3">
+            <div class="circular-sbl">
+                That was Great! Until next time.<br>
+                -Your Friendly Neighborhood SpiderMan <br>
+                <a href="home.html"><button class="button1">Home</button></a></continued>
+                <div class="circle1l"></div>
+                <div class="circle2l"></div>
+                <div class="circle3l"></div>
+                <div class="circle4l"></div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
