changed image and fixed positioning

--- a/end.html
+++ b/end.html
@@ -21,6 +21,8 @@
                 <div class="circle3l"></div>
                 <div class="circle4l"></div>
             </div>
+            </div>
+        <div class="eb">
         </div>
     </div>
 </body>
