--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 
 <body>
     <div class="home-banner">
+        <div class="hb-image">
         <div class="content">
             <div class="circular-sb">
                 With great power comes great responsibility. <br>
@@ -22,6 +23,7 @@
                 <div class="circle3"></div>
                 <div class="circle4"></div>
                 <div class="circle5"></div>
+            </div>
             </div>
         </div>
     </div>
