--- a/end.html
+++ b/end.html
@@ -13,7 +13,7 @@
     <div class="end-banner">
         <div class="content3">
             <div class="circular-sbl">
-                That was Great! Until next time.<br>
+                That was Fun! Until next time.<br>
                 -Your Friendly Neighborhood SpiderMan <br>
                 <a href="home.html"><button class="button1">Home</button></a></continued>
                 <div class="circle1l"></div>
